[gd_scene load_steps=3 format=3 uid="uid://bvxqy8nqjxqkr"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_0h8y7"]
[ext_resource type="Script" path="res://scripts/NetworkDebug.gd" id="2_x4k2m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0h8y7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "OpenMMO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect to Server"

[node name="ServerAddress" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "ws://localhost:8080"

[node name="Username" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="NetworkDebug" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -120.0
offset_right = 410.0
offset_bottom = -10.0
script = ExtResource("2_x4k2m")

[node name="DebugPanel" type="Panel" parent="NetworkDebug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkDebug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StatusLabel" type="Label" parent="NetworkDebug/VBoxContainer"]
layout_mode = 2
text = "Status: Disconnected"

[node name="PingLabel" type="Label" parent="NetworkDebug/VBoxContainer"]
layout_mode = 2
text = "Ping: N/A"

[node name="MessagesLabel" type="Label" parent="NetworkDebug/VBoxContainer"]
layout_mode = 2
text = "Messages: 0"
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]